<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/calculator"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

					    <LinearLayout
					        android:layout_width="fill_parent"
					        android:layout_height="0dp"
					        android:layout_weight="18"
					        android:orientation="horizontal" >

					        <TextView
		                        android:id="@+id/tv_percent"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:text="@string/bill_amount"
		                        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	                        <EditText
	                            android:id="@+id/et_bill_amount"
	                            android:layout_width="120dp"
	                            android:layout_height="wrap_content"
	                            android:layout_alignParentRight="true"
	                            android:layout_alignParentTop="true"
	                            />
				        </LinearLayout>
				        
					    <LinearLayout
					        android:layout_width="fill_parent"
					        android:layout_height="0dp"
					        android:layout_weight="18"
					        android:orientation="vertical" >
								
								<TextView
	                            android:id="@+id/tv_percent"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/percent"
	                            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		                        <LinearLayout
		                            android:layout_width="match_parent"
		                            android:layout_height="wrap_content"
		                            android:orientation="horizontal" >
		
			                        <SeekBar
			                            android:id="@+id/sb_percent_seekbar"
			                            android:layout_width="80dp"
			                            android:layout_height="wrap_content"
			                            android:layout_alignParentBottom="true"
			                            android:layout_alignParentLeft="true"
			                            android:layout_marginLeft="0dp"
			                            android:layout_weight="1"
			                            android:indeterminate="false"
			                            android:max="100"
			                            android:progress="15" />
			
			                        <TextView
			                            android:id="@+id/tv_percent_amount"
			                            android:layout_width="wrap_content"
			                            android:layout_height="wrap_content"
			                            android:layout_alignParentRight="true"
			                            android:layout_alignTop="@+id/sb_percent_seekbar"
			                            android:layout_gravity="right"
			                            android:text="15%"
			                            android:textAppearance="?android:attr/textAppearanceMedium" />
		                        </LinearLayout>
						        
					        </LinearLayout>
					        
						<LinearLayout
						    android:layout_width="fill_parent"
						    android:layout_height="0dp"
						    android:layout_weight="18"
						    android:orientation="vertical" >
							
						    <TextView
                            android:id="@+id/tv_people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/devide_amount"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

						    <LinearLayout
		                            android:layout_width="match_parent"
		                            android:layout_height="wrap_content"
		                            android:orientation="horizontal" >
			                        
		                        <SeekBar
		                            android:id="@+id/sb_people_seekbar"
		                            android:layout_width="80dp"
		                            android:layout_height="wrap_content"
		                            android:layout_alignParentBottom="true"
		                            android:layout_alignParentLeft="true"
		                            android:layout_marginLeft="0dp"
		                            android:layout_weight="1"
		                            android:indeterminate="false"
		                            android:max="100"
		                            android:progress="1" />
		
		                        <TextView
		                            android:id="@+id/tv_people_count"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_alignTop="@+id/sb_people_seekbar"
		                            android:layout_gravity="right"
		                            android:gravity="right"
		                            android:text="Me"
		                            android:textAppearance="?android:attr/textAppearanceMedium" />
		                        
	                        </LinearLayout>
	                        
						</LinearLayout>
						
					    <LinearLayout
					        android:layout_width="match_parent"
					        android:layout_height="0dp"
					        android:layout_weight="20"
					        android:orientation="vertical" >
							
					        <LinearLayout
					            android:layout_width="match_parent"
					            android:layout_height="0dp"
					            android:layout_weight="1"
					            android:gravity="bottom"
					            android:orientation="horizontal" >
		                        
						        <TextView
						            android:id="@+id/tv_date"
						            android:layout_width="140dp"
						            android:layout_height="wrap_content"
						            android:layout_alignParentTop="true"
						            android:layout_alignRight="@+id/tv_total_bill_per_person"
						            android:gravity="right"
						            android:text="@string/bill_per_person"
						            android:textAppearance="?android:attr/textAppearanceMedium"
						            android:textSize="15sp" />
	
								<TextView
								    android:id="@+id/tv_bill_per_person_amount"
								    android:layout_width="wrap_content"
								    android:layout_height="wrap_content"
								    android:layout_alignParentRight="true"
								    android:layout_alignParentTop="true"
								    android:layout_toRightOf="@+id/tv_date"
								    android:paddingLeft="18dp"
								    android:paddingTop="1dp"
								    android:text="@string/bill_per_person_amount"
								    android:textAppearance="?android:attr/textAppearanceMedium"
								    android:textSize="17sp" />
							</LinearLayout>
							
					        <LinearLayout
					            android:layout_width="match_parent"
					            android:layout_height="0dp"
					            android:layout_weight="1"
					            android:gravity="bottom"
					            android:orientation="horizontal" >
		
								<TextView
								    android:id="@+id/tv_tip_per_person"
								    android:layout_width="140dp"
								    android:layout_height="wrap_content"
								    android:layout_centerVertical="true"
								    android:layout_toLeftOf="@+id/tv_bill_per_person_amount"
								    android:gravity="right"
								    android:text="@string/tip_per_person"
								    android:textAppearance="?android:attr/textAppearanceMedium"
								    android:textSize="15sp" />

								<TextView
					                android:id="@+id/tv_tip_per_person_amount1"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:paddingLeft="18dp"
					                android:text="@string/bill_per_person_amount"
					                android:textAppearance="?android:attr/textAppearanceMedium"					                
					                android:textSize="17sp" />

							</LinearLayout>

					        <LinearLayout
					            android:layout_width="match_parent"
					            android:layout_height="0dp"
					            android:layout_weight="1"
					            android:gravity="bottom|center_vertical"
					            android:orientation="horizontal" >

					            <TextView
					                android:id="@+id/tv_total_bill_per_person"
					                android:layout_width="140dp"
					                android:layout_height="wrap_content"
					                android:layout_alignParentBottom="true"
					                android:layout_alignParentLeft="true"
					                android:paddingBottom="3dp"
					                android:text="@string/total_bill_per_person"
					                android:textAppearance="?android:attr/textAppearanceMedium"
					                android:textColor="@color/maroon"
					                android:textSize="15sp" />

					            <TextView
					                android:id="@+id/tv_total_bill_per_person_amount1"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:paddingBottom="1dp"
					                android:paddingLeft="18dp"
					                android:text="@string/bill_per_person_amount"
					                android:textAppearance="?android:attr/textAppearanceMedium"
					                android:textColor="@color/maroon"
					                android:textSize="17sp" />

					        </LinearLayout>
							
						</LinearLayout>
						
					    <LinearLayout
					        android:layout_width="match_parent"
					        android:layout_height="0dp"
					        android:layout_gravity="bottom"
					        android:layout_weight="10"
					        android:gravity="bottom|center_vertical"
					        android:orientation="horizontal" >
	
							<TextView
							    android:id="@+id/tv_total_amount"
							    android:layout_width="140dp"
							    android:layout_height="wrap_content"
							    android:layout_alignParentBottom="true"
							    android:layout_alignParentLeft="true"
							    android:paddingLeft="20dp"
							    android:text="@string/total_amount"
							    android:textAppearance="?android:attr/textAppearanceLarge"
							    android:textColor="@color/maroon"
							    android:textSize="15dp" />

							<TextView
							    android:id="@+id/tv_total_amount_value"
							    android:layout_width="wrap_content"
							    android:layout_height="wrap_content"
							    android:paddingLeft="18dp"
							    android:text="@string/bill_per_person_amount"
							    android:textAppearance="?android:attr/textAppearanceLarge"
							    android:textColor="@color/maroon"
							    android:textSize="18sp" />
							
				        </LinearLayout>
				        
					    <LinearLayout
					        android:layout_width="fill_parent"
					        android:layout_height="0dp"
					        android:layout_gravity="bottom"
					        android:layout_marginTop="20dp"
					        android:layout_weight="10"
					        android:gravity="bottom"
					        android:orientation="horizontal" >
							
					         <ImageButton
					             android:id="@+id/btn_save"
					             android:layout_width="0dp"
					             android:layout_height="wrap_content"
					             android:layout_alignParentLeft="true"
					             android:layout_centerVertical="true"
					             android:layout_weight="1"
					             android:background="@drawable/bg_button"
					             android:paddingBottom="5dp"
					             android:src="@drawable/ic_save_666" />
					         
					        <ImageButton
					            android:id="@+id/btn_reset"
					            style="@style/AppBaseTheme"
					            android:layout_width="0dp"
					            android:layout_height="wrap_content"
					            android:layout_centerHorizontal="true"
					            android:layout_centerVertical="true"
					            android:layout_weight="1"
					            android:background="@drawable/bg_button"
					            android:src="@drawable/ic_action_cancel" />
					         
					        <ImageButton
					            android:id="@+id/btn_share"
					            style="@style/Theme.Example"
					            android:layout_width="0dp"
					            android:layout_height="wrap_content"
					            android:layout_alignParentRight="true"
					            android:layout_alignTop="@+id/imageView1"
					            android:layout_weight="1"
					            android:background="@drawable/bg_button"
					            android:src="@drawable/ic_action_share" />
						    
						</LinearLayout>
					
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/guide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                </LinearLayout>
               
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    

</RelativeLayout>
